--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,36 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import 'assets/normalize.css';
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import "assets/normalize.css";
 
-html{
+html {
   font-size: 1vw;
-  font-family: 'Roboto', sans-serif;
-  overflow-y: scroll;
-  body{
+  font-family: "Roboto", sans-serif;
+  overflow: hidden;
+  body {
     // background-color: #2c2c2c;
     word-wrap: break-word;
   }
-  
-  button:hover{
-    background-color: darken(#3cae59,10%);
+
+  button:hover {
+    background-color: darken(#3cae59, 10%);
   }
 
-  ::-webkit-scrollbar-track
-  {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  ::-webkit-scrollbar-track {
     border-radius: 10px;
     background-color: inherit;
   }
 
-  ::-webkit-scrollbar
-  {
+  ::-webkit-scrollbar {
     width: 12px;
     background-color: inherit;
   }
 
-  ::-webkit-scrollbar-thumb
-  {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #D62929;
+  ::-webkit-scrollbar-thumb {
+    position: relative;
+    background: #E5E5E5;
+    width: 9px;
+    border-radius: 4px;
+    top: 0;
+    z-index: 2;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.25s linear;
   }
 }
